--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/a23246542/hexLayout#readme",
   "dependencies": {
+    "aos": "^2.3.4",
     "autoprefixer": "^9.8.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.5.0",
@@ -32,6 +33,7 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.3",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
@@ -42,7 +44,13 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
     "minimist": "^1.2.5",
-    "popper": "^1.0.1"
+    "popper": "^1.0.1",
+    "swiper": "^5.4.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "gulp-ejs": "^5.1.0",
